# darkhook

./: CMakeLists.txt  README.md
cmake/: darkhook-config.cmake.in
dll_resources/: darkhook.def  darkhook.rc
include/: darkhook.cpp  darkhook.h  darkhook.hpp
src/: buffer.cpp  buffer.h  hook.cpp  trampoline.cpp  trampoline.h
src/hde/: pstdint.h
